# CU-Crash

./: README.md  package-lock.json  package.json
backend/: .gitignore  README.md  dependencies.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  client_id.json  config.py  dependencies.py  main.py  scripts.py
backend/app/endpoint/: user.py
backend/app/endpoints/: instructor.py  review.py  subject.py  supplementary.py  user.py
backend/app/ex_rabbitmq/: Admin.py  Sent.py
backend/app/model/: User.py
backend/app/models/: Instructor.py  InstructorReview.py  Review.py  Subject.py  SubjectReview.py  User.py  __init__.py  review.py
backend/app/protobufs/: recommendations.proto  supplementary.proto
backend/app/recomendations/: recommendation.py  recommendations_pb2.py  recommendations_pb2_grpc.py
backend/app/schemas/: InstructorAndReview.py  Review.py  SubjectAndReview.py  Supplementary.py  User.py  __init__.py
backend/app/service/db/: dummy_models.py  dummy_schemas.py  sql_connection.py  test_crud.py
backend/app/services/: __init__.py  email.py  user_mangement.py
backend/app/services/db/: __init__.py  base.py  instructor.py  instructor_review.py  no_sql_connection.py  review.py  sql_connection.py  subject.py  subject_review.py  test_crud.py  user.py
backend/app/supplementary/: supplementary.py  supplementary_pb2.py  supplementary_pb2_grpc.py
backend/endpoint/: login.py
backend/protobufs/: recommendations.proto
backend/recomendations/: recommendation.py  recommendations_pb2_grpc.py
backend/service/db/: sql_connection.py
frontend/: .envx  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  constants.js  env.js  index.js
frontend/src/components/AddReviewForm/: index.js
frontend/src/components/AddSupplementaryForm/: index.js
frontend/src/components/CreateReviewForm/: index.js
frontend/src/components/Forms/: AddInstructorReviewForm.js  AddReviewForm.js  AddSubjectReviewForm.js  AddSupplementaryForm.js
frontend/src/pages/home/: Home.js
(+21 files in other folders)
